--- a/style.css
+++ b/style.css
@@ -26,10 +26,14 @@ html{
     overflow-y: scroll;
     scrollbar-color: #3195ff #0e1012;
     scrollbar-width: 5px;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 body{
     background-color: #0e1012;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .p{
@@ -411,5 +415,9 @@ a{
 
     .footer{
         padding: 150px 30px 10px 30px;
+    }
+    
+    .h1{
+        font-size: 5rem;
     }
 }
